# skynetsubdomainX

./: README.md  pyproject.toml
skynetsubdomain/: __init__.py  cli.py  sources.py
skynetsubdomain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
